--- a/public/musikkritiken.html
+++ b/public/musikkritiken.html
@@ -4,29 +4,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <title>Musikkritiken</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/styles.741674b1e72c82dd99ec5da19197b1391d9e86c49d2854faae1909f2151ecbf6.css">
-  <link rel="stylesheet" href="/css/navigation.f281a8de366dd12fbd26b1047ffc709e530e8d4223b0d2155a3edee78e13861e.css">
+  <link rel="stylesheet" href="https://phlow.github.io/ari-glamslam/css/normalize.css">
+  <link rel="stylesheet" href="https://phlow.github.io/ari-glamslam/css/styles.5368e21afec37bd45462ef14d5f367f08ce39d31827a0dac7917dafbea831bff.css">
+  <link rel="stylesheet" href="https://phlow.github.io/ari-glamslam/css/navigation.10aec9c1d1f39f6dbfafd3a92a9851bc9b88004418b0a9bd4915815b64a7b274.css">
 
 </head>
 <body>
 
-  <header id="masthead">
-    <div id="logo">
-      <a href="#" title="Zurück zur Startseite">
-        <img src="assets/images/logo.svg" alt="">
-      </a>
-    </div>
+<header id="masthead">
+  <div id="logo">
+    <a href="https://phlow.github.io/ari-glamslam/" title="Zurück zur Startseite">
+      <img src="assets/images/logo.svg" alt="Zurück zur Startseite">
+    </a>
+  </div>
+  <a href="https://phlow.github.io/ari-glamslam/" title="Zurück zur Startseite">
     <h1>Ari Glamslam</h1>
-    <p id="slogan">
-      Ich programmiere und schreibe über Spiele
-    </p>
-  </header>
+  </a>
+  <p id="slogan">
+    Ich programmiere und schreibe über Spiele
+  </p>
+</header>
 
   <nav>
     <ul id="top--navigation" class="topnav" aria-label="Main">
       <li class="show active">
-        <a href="#">Start</a>
+        <a href="https://phlow.github.io/ari-glamslam/">Start</a>
       </li>
       <li>
         <a href="aktuelles.html">Aktuelles</a>
@@ -52,17 +54,101 @@
     </ul>
   </nav>
 
-<main>
+  <main>
   <h1>Musikkritiken</h1>
-  
+  <img src="images/cover-artwork-destination-cologne-vol1.jpg" alt="Titelbild des Spiels Samorost">
+<p>Netlabel Compilation · Phlow-Magazine.com präsentiert &ldquo;Destination Cologne&rdquo;, eine Compilation mit Musik von Netlabels, die aus Köln stammen und hier leben. Kuratiert von mo. präsentiert diese Sammlung ein lebendiges Profil der freien elektronischen Musikszene in einer der aktivsten Städte Deutschlands.</p>
+<p>Nach Stockhausen und Kompakt macht sich ein neues Kollektiv daran, Köln wieder auf die Landkarte der elektronischen Musik zu setzen. Diese Netlabel-Buddies haben ihren Sound zur Compilation beigesteuert.</p>
+<p>Wir präsentieren stolz &ldquo;Destination Cologne&rdquo;, eine kostenlose Netlabel-Compilation von Netlabels aus Köln. Um mehr Informationen über die beteiligten Netlabels zu erhalten, klickt auf den Netlabel-Button im Widget. Und diese Netlabels waren an der Entstehung von &ldquo;Destination Cologne&rdquo; beteiligt:</p>
+<ul>
+<li><a href="http://www.zimmer-records.org/" target="_blank">Zimmerlautstaerke</a>
+</li>
+<li><a href="http://www.stadtgruenlabel.net/" target="_blank">Stadtgruen</a>
+</li>
+<li><a href="http://www.archive.org/details/restlabel" target="_blank">Rest Label</a>
+</li>
+<li>rec72</li>
+<li><a href="http://www.phonocake.org/" target="_blank">Phonocake</a>
+</li>
+<li>iD.EOLOGY</li>
+<li>FOEM</li>
+<li>directors cut cologne</li>
+<li><a href="http://www.derkleinegruenewuerfel.de/" target="_blank">Der kleine grüne Würfel</a>
+</li>
+<li><a href="http://www.2063music.de/" target="_blank">2063music</a>
+</li>
+<li>Soundmap of Cologne</li>
+</ul>
+<h2 id="musikbeispiel">Musikbeispiel</h2>
+<p>&ldquo;Cable Pollution Results&rdquo; von New Delhi Fm</p>
+<p><audio src="http://www.archive.org/download/Wuerfel07-NewDelhiFm-RowBy/Wuerfel07-NewDelhiFm-03_cable_pollution_results.mp3" autobuffer autoloop loop controls></audio></p>
+<h2 id="free-mp3-music-download">Free MP3 Music Download</h2>
+<p><a class="button" href="http://www.archive.org/download/Destination_Cologne_Vol_1/Destination_Cologne_Vol_1_vbr_mp3.zip">Lade das ZIP-Archiv herunter!</a></p>
+<h2 id="playlist---destination-cologne">Playlist - Destination Cologne</h2>
+<ol>
+<li>&ldquo;Thalys - Mehrsprachige Zugansage&rdquo; (Soundmap of Cologne)</li>
+<li>&ldquo;Please Repeat&rdquo; from System-Pi (Stadtgruen)</li>
+<li>&ldquo;Cable Pollution Results&rdquo; from New Delhi FM (Der kleine grüne Würfel)</li>
+<li>&ldquo;The one with the lead guitar&rdquo; from Monomatik(iD.EOLOGY)</li>
+<li>&ldquo;lexington&rdquo; from nika japaridze (Rest Netlabel)</li>
+<li>&ldquo;Periodic Table&rdquo; from 6884 (FOEM)</li>
+<li>&ldquo;more&rdquo; from Breitbandkater (directors cut cologne)</li>
+<li>&ldquo;Phonocake&rdquo; from Aries Fiktion (Phonocake)</li>
+<li>&ldquo;SKOOL&rdquo; from Organo Flex (72rec)</li>
+<li>&ldquo;Jutro&rdquo; from Phonout (Zimmerlautstärke)</li>
+<li>&ldquo;04_untitled&rdquo; from monostatic (2063music.de)</li>
+<li>&ldquo;Die singenden Schranken von Holweide&rdquo; (Soundmap of Cologne)</li>
+</ol>
 
-</main>
-  <footer>
-  </footer>
+
+  </main>
+<footer>
+  <div class="wrapper raster--spalten--3">
+    <div>
+      <p>
+        Ari Glamslam programmiert und schreibt über Spiele.
+      </p>
+    </div>
+    <div>
+      <nav id="service" role="service">
+        <ul class="no-bullet">
+          <li><a href="#" target="_blank">Start</a></li>
+          <li><a href="#" target="_blank">Kontakt</a></li>
+          <li><a href="#" target="_blank">Newsletter</a></li>
+          <li><a href="#" target="_blank">Impressum</a></li>
+          <li><a href="#" target="_blank">Datenschutz</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div>
+      <nav id="social--media" role="social-media">
+        <ul class="no-bullet">
+          <li>
+            <a id="twitter" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z" /></svg>
+            </a>
+          </li>
+          <li>
+            <a id="github" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M400 139c144 0 260 116 260 260 0 115-75 213-178 247-9 3-17-2-17-13v-71c0-35-18-48-18-48 57-6 119-28 119-128 0-44-27-70-27-70s14-29-2-69c0 0-22-7-72 27-42-12-88-12-130 0-50-34-72-27-72-27-16 40-2 69-2 69s-27 26-27 70c0 100 62 122 119 128 0 0-14 10-17 35-15 7-53 18-76-22 0 0-13-25-39-27 0 0-26 0-2 16 0 0 17 8 29 38 0 0 16 51 88 35v44c0 11-9 16-18 13-103-34-178-132-178-247 0-144 116-260 260-260z" /></svg>
+            </a>
+          </li>
+          <li>
+            <a id="facebook" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M604 170c15 0 26 11 26 26v408c0 15-11 26-26 26H487V452h60l9-70h-69v-44c0-20 6-34 35-34h37v-62s-24-3-54-3c-53 0-89 33-89 92v51h-60v70h60v178H196c-15 0-26-11-26-26V196c0-15 11-26 26-26h408z" /></svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</footer>
 
 
-
-<script src="/js/scripts.js"></script>
+<script src="https://phlow.github.io/ari-glamslam/js/scripts.js"></script>
 
 </body>
 </html>
