--- a/public/spielekritiken.html
+++ b/public/spielekritiken.html
@@ -3,30 +3,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>Spielekritiken</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/styles.741674b1e72c82dd99ec5da19197b1391d9e86c49d2854faae1909f2151ecbf6.css">
-  <link rel="stylesheet" href="/css/navigation.f281a8de366dd12fbd26b1047ffc709e530e8d4223b0d2155a3edee78e13861e.css">
+  <title>Das niedliche Spiel Samorost</title>
+  <link rel="stylesheet" href="https://phlow.github.io/ari-glamslam/css/normalize.css">
+  <link rel="stylesheet" href="https://phlow.github.io/ari-glamslam/css/styles.5368e21afec37bd45462ef14d5f367f08ce39d31827a0dac7917dafbea831bff.css">
+  <link rel="stylesheet" href="https://phlow.github.io/ari-glamslam/css/navigation.10aec9c1d1f39f6dbfafd3a92a9851bc9b88004418b0a9bd4915815b64a7b274.css">
 
 </head>
 <body>
 
-  <header id="masthead">
-    <div id="logo">
-      <a href="#" title="Zurück zur Startseite">
-        <img src="assets/images/logo.svg" alt="">
-      </a>
-    </div>
+<header id="masthead">
+  <div id="logo">
+    <a href="https://phlow.github.io/ari-glamslam/" title="Zurück zur Startseite">
+      <img src="assets/images/logo.svg" alt="Zurück zur Startseite">
+    </a>
+  </div>
+  <a href="https://phlow.github.io/ari-glamslam/" title="Zurück zur Startseite">
     <h1>Ari Glamslam</h1>
-    <p id="slogan">
-      Ich programmiere und schreibe über Spiele
-    </p>
-  </header>
+  </a>
+  <p id="slogan">
+    Ich programmiere und schreibe über Spiele
+  </p>
+</header>
 
   <nav>
     <ul id="top--navigation" class="topnav" aria-label="Main">
       <li class="show active">
-        <a href="#">Start</a>
+        <a href="https://phlow.github.io/ari-glamslam/">Start</a>
       </li>
       <li>
         <a href="aktuelles.html">Aktuelles</a>
@@ -52,37 +54,83 @@
     </ul>
   </nav>
 
-<main>
-  <h1>Spielekritiken</h1>
-  <p>Rubrik: Online-Spiele</p>
-<p>Das niedliche Spiel Samorost</p>
-<p>BILD: Titelbild des Spiels Samorost</p>
-<p>Das Flash-Klick-Adventure Samorost von Jakub Dvorsky gehört zu den kleinen Dingen, die einen unendlich begeistern. Wie schon der erste Teil des Spiels, das Dvorsky im Rahmen seiner Abschlussarbeit an der Academy of Art, Architecture and Design in Prag entwickelte, verwöhnt die zweite Episode den Betrachter mit detailverliebten Bildern und einer wunderbaren Geschichte. Obendrein schafft es der Tscheche, im fantastischen zweiten Teil noch einen draufzusetzen.</p>
-<p>Text: mo.</p>
+  <main>
+  <h1>Das niedliche Spiel Samorost</h1>
+  <figure>
+  <img src="images/samorost-titelbild.jpg" alt="Titelbild des Spiels Samorost">
+  <figcaption>Titelbild des Spiels Samorost</figcaption>
+</figure>
+<p>Online-Spiele · Das Flash-Klick-Adventure Samorost von Jakub Dvorsky gehört zu den kleinen Dingen, die einen unendlich begeistern. Wie schon der erste Teil des Spiels, das Dvorsky im Rahmen seiner Abschlussarbeit an der Academy of Art, Architecture and Design in Prag entwickelte, verwöhnt die zweite Episode den Betrachter mit detailverliebten Bildern und einer wunderbaren Geschichte. Obendrein schafft es der Tscheche, im fantastischen zweiten Teil noch einen draufzusetzen.</p>
 <p>Für seine Abschlussarbeit erhielt Jakub Dvorsky an seiner Kunsthochschule eine Note, die in Deutschland einer Zwei entspricht. Für das Flash-Spiel fotografierte er Bilder mit Steinen, Holz, Moos, verrosteten Gegenständen und ähnlichem Material und kombinierte diese zu eigenwilligen Collagen. Mithilfe der Flash-Technik verband er dann die einzelnen Fotomontagen mit 2D-Animationen und stellte sein Spiel kostenlos ins Internet. Überrascht vom Erfolg entschloss sich der Tscheche, einen zweiten Teil zu entwickeln.</p>
-<p>BILD: Samorost-Wichtelmann beim Chef-Alien
-BILDUNTERSCHRIFT: Samorost-Wichtelmann beim Chef-Alien</p>
-<p>Ein Wichtelmann auf Reisen</p>
+<h2 id="ein-wichtelmann-auf-reisen">Ein Wichtelmann auf Reisen</h2>
+<figure>
+  <img src="images/samorost-rakete.jpg" alt="Ein Wichtelmann hebt mit seiner Rakete ab">
+  <figcaption>Ein Wichtelmann hebt mit seiner Rakete ab</figcaption>
+</figure>
 <p>Im Mittelpunkt des Flash-Klick-Adventures Samorost steht ein kleiner Wichtelmann. Dieser lebt auf einem niedlichen und skurrilen Planeten. Während der Spieler im ersten Teil von Samorost eine Kollision mit einem anderen Planeten verhindern muss, startet er im zweiten Teil eine Rettungsaktion. Denn sein geliebter Hund wurde von fiesen Aliens entführt.</p>
-<p>BILD: Samorost-Wichtelmann im Tunnel</p>
+<img class="right" src="images/samorost-tunnel.jpg" alt="Samorost-Wichtelmann im Tunnel">
 <p>Großartig an dem Flash-Spiel ist seine Einfachheit. Zwar müssen im zweiten Teil erstmals auch Gegenstände miteinander kombiniert werden, indem man sie mit dem Mauszeiger auf dem Bildschirm verschiebt, die Hauptlösung jedes Rätsels klickt man aber auch in Samorost nacheinander zusammen. Dazu gehören ein wenig Kombinationssinn und Humor. Im Gegensatz zu anderen Adventures läuft auch Teil 2 von Samorost wiederum linear ab und erzählt so eine kleine Geschichte, die man selbst am Laufen hält.</p>
-<p>Fazit</p>
+<h2 id="fazit">Fazit</h2>
 <p>Was den ersten wie auch den zweiten Teil von Samorost so besonders macht, sind nicht nur liebevolle Details, die sich in Klängen und Bildern wiederfinden, sondern die gesamte Spielästhetik. Angefangen bei den Bildern über die Montagen bis hin zu den eigenwilligen Sounds samt Soundtrack verströmt das Spiel ein eigenartiges und bezauberndes Flair. Dieses zieht seine Spieler in eine kleine sagenhafte Parallelwelt. Ein humorvolles Spiel mit Suchtcharakter, einfach und tatsächlich: großes Kino!</p>
-<p>Links</p>
+<h2 id="links">Links</h2>
 <ul>
-<li><a href="https://amanita-design.net/games/samorost-1.html">Samorost - Teil 1</a></li>
-<li><a href="https://amanita-design.net/games/samorost-2.html">Samorost - Teil 2</a></li>
-<li><a href="https://amanita-design.net/games/samorost3.html">Samorost - Teil 3</a></li>
+<li><a href="https://amanita-design.net/games/samorost-1.html" target="_blank">Samorost - Teil 1</a>
+</li>
+<li><a href="https://amanita-design.net/games/samorost-2.html" target="_blank">Samorost - Teil 2</a>
+</li>
+<li><a href="https://amanita-design.net/games/samorost3.html" target="_blank">Samorost - Teil 3</a>
+</li>
 </ul>
 
 
-</main>
-  <footer>
-  </footer>
+  </main>
+<footer>
+  <div class="wrapper raster--spalten--3">
+    <div>
+      <p>
+        Ari Glamslam programmiert und schreibt über Spiele.
+      </p>
+    </div>
+    <div>
+      <nav id="service" role="service">
+        <ul class="no-bullet">
+          <li><a href="#" target="_blank">Start</a></li>
+          <li><a href="#" target="_blank">Kontakt</a></li>
+          <li><a href="#" target="_blank">Newsletter</a></li>
+          <li><a href="#" target="_blank">Impressum</a></li>
+          <li><a href="#" target="_blank">Datenschutz</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div>
+      <nav id="social--media" role="social-media">
+        <ul class="no-bullet">
+          <li>
+            <a id="twitter" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z" /></svg>
+            </a>
+          </li>
+          <li>
+            <a id="github" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M400 139c144 0 260 116 260 260 0 115-75 213-178 247-9 3-17-2-17-13v-71c0-35-18-48-18-48 57-6 119-28 119-128 0-44-27-70-27-70s14-29-2-69c0 0-22-7-72 27-42-12-88-12-130 0-50-34-72-27-72-27-16 40-2 69-2 69s-27 26-27 70c0 100 62 122 119 128 0 0-14 10-17 35-15 7-53 18-76-22 0 0-13-25-39-27 0 0-26 0-2 16 0 0 17 8 29 38 0 0 16 51 88 35v44c0 11-9 16-18 13-103-34-178-132-178-247 0-144 116-260 260-260z" /></svg>
+            </a>
+          </li>
+          <li>
+            <a id="facebook" href="#" target="_blank">
+              <svg class="social--icon" role="img" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
+                <path d="M604 170c15 0 26 11 26 26v408c0 15-11 26-26 26H487V452h60l9-70h-69v-44c0-20 6-34 35-34h37v-62s-24-3-54-3c-53 0-89 33-89 92v51h-60v70h60v178H196c-15 0-26-11-26-26V196c0-15 11-26 26-26h408z" /></svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</footer>
 
 
-
-<script src="/js/scripts.js"></script>
+<script src="https://phlow.github.io/ari-glamslam/js/scripts.js"></script>
 
 </body>
 </html>
